--- a/MPfm/MPfm.WindowsStore/Classes/Pages/SyncPage.xaml
+++ b/MPfm/MPfm.WindowsStore/Classes/Pages/SyncPage.xaml
@@ -62,7 +62,7 @@
                     <CompositeTransform ScaleY="-1"/>
                 </ProgressBar.RenderTransform>
             </ProgressBar>
-            <ListView Grid.Row="3" x:Name="listView" Height="Auto" Margin="0,10,80,0" VerticalAlignment="Stretch">
+            <ListView Grid.Row="3" x:Name="listView" Height="Auto" Margin="0,10,80,0" VerticalAlignment="Stretch" SelectionChanged="listView_SelectionChanged" ItemClick="listView_ItemClick">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <Grid Height="52" Margin="6">
@@ -101,9 +101,9 @@
                             <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PortraitBackButtonStyle}"/>
                         </ObjectAnimationUsingKeyFrames>
 
-                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="itemGridView" Storyboard.TargetProperty="Padding">
+                        <!--<ObjectAnimationUsingKeyFrames Storyboard.TargetName="itemGridView" Storyboard.TargetProperty="Padding">
                             <DiscreteObjectKeyFrame KeyTime="0" Value="96,137,10,56"/>
-                        </ObjectAnimationUsingKeyFrames>
+                        </ObjectAnimationUsingKeyFrames>-->
                     </Storyboard>
                 </VisualState>
 
@@ -120,12 +120,12 @@
                             <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource SnappedPageHeaderTextStyle}"/>
                         </ObjectAnimationUsingKeyFrames>
 
-                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="itemListView" Storyboard.TargetProperty="Visibility">
+                        <!--<ObjectAnimationUsingKeyFrames Storyboard.TargetName="itemListView" Storyboard.TargetProperty="Visibility">
                             <DiscreteObjectKeyFrame KeyTime="0" Value="Visible"/>
                         </ObjectAnimationUsingKeyFrames>
                         <ObjectAnimationUsingKeyFrames Storyboard.TargetName="itemGridView" Storyboard.TargetProperty="Visibility">
                             <DiscreteObjectKeyFrame KeyTime="0" Value="Collapsed"/>
-                        </ObjectAnimationUsingKeyFrames>
+                        </ObjectAnimationUsingKeyFrames>-->
                     </Storyboard>
                 </VisualState>
             </VisualStateGroup>
