--- a/MPfm/MPfm.WindowsStore/Classes/Pages/SyncMenuPage.xaml
+++ b/MPfm/MPfm.WindowsStore/Classes/Pages/SyncMenuPage.xaml
@@ -39,7 +39,7 @@
         </Grid.RowDefinitions>
 
         <!-- Back button and page title -->
-        <Grid>
+        <Grid Grid.Row="0" Background="#FF36454F">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
@@ -47,42 +47,51 @@
             <Button x:Name="backButton" Click="GoBack" IsEnabled="{Binding Frame.CanGoBack, ElementName=pageRoot}" Style="{StaticResource BackButtonStyle}"/>
             <TextBlock x:Name="pageTitle" Grid.Column="1" IsHitTestVisible="false" Style="{StaticResource PageHeaderTextStyle}"/>
         </Grid>
-        <Grid Grid.Row="1" Margin="120,30,0,30">
+        <Grid Grid.Row="1" Margin="120,0,0,30">
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition />
                 <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-            <TextBlock Grid.Row="0" x:Name="lblIPAddress" Text="My IP address is" FontSize="16" />
-            <TextBlock Grid.Row="1" x:Name="lblStatus" Text="Loading..." FontSize="16" Margin="0,10,0,0" />
-            <ProgressBar Grid.Row="2" x:Name="progressBar" Height="20" Margin="0,10,79,0" RenderTransformOrigin="0.5,0.5">
-                <ProgressBar.RenderTransform>
-                    <CompositeTransform ScaleY="-1"/>
-                </ProgressBar.RenderTransform>
-            </ProgressBar>
-            <ListView Grid.Row="3" x:Name="listView" Height="Auto" Margin="0,10,80,0" VerticalAlignment="Stretch">
+            </Grid.RowDefinitions>            
+            <TextBlock Grid.Row="1" x:Name="lblInstructions" Text="Please select audio files to download to your device:" FontSize="16" Margin="0,30,0,0" />
+            <ListView Grid.Row="2" x:Name="listView" Height="Auto" Margin="0,10,80,0" VerticalAlignment="Stretch">
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <Grid Height="52" Margin="6">
+                        <Grid Height="52" Margin="0">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto"/>
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
-                            <Border Background="#FF36454F" Width="52" Height="52">
-                                <!--<Image Source="{Binding Image}" Stretch="UniformToFill"/>-->
+                            <Border Width="40" Height="40">
+                                <Image Source="/Assets/Icons/icon_apple.png" Stretch="UniformToFill"/>
                             </Border>
-                            <StackPanel Grid.Column="1" VerticalAlignment="Top" Margin="10,0,0,0">
+                            <StackPanel Grid.Column="1" Margin="10,12,0,0">
                                 <TextBlock Text="{Binding Title}" Style="{StaticResource TitleTextStyle}" TextWrapping="NoWrap"/>
                             </StackPanel>
                         </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <StackPanel Grid.Row="4" Orientation="Horizontal">                
-                <Button x:Name="btnSelectAll" Content="Refresh" Click="btnSelectAll_Click"/>
+            <StackPanel Grid.Row="3" Orientation="Horizontal" Margin="0,10,0,0">
+                <Button x:Name="btnSelectAll" Height="52" Content="Select All" Click="btnSelectAll_Click"/>
+                <StackPanel Orientation="Vertical" Margin="10,0,0,0">
+                    <TextBlock x:Name="lblTotal" Text="Total: 0 files (0.0 MB)" Style="{StaticResource ItemTextStyle}" TextWrapping="NoWrap" />
+                    <TextBlock x:Name="lblFreeSpace" Text="Free space: 1834,8 MB" Style="{StaticResource CaptionTextStyle}" TextWrapping="NoWrap" />
+                </StackPanel>
             </StackPanel>
+        </Grid>
+        <Grid x:Name="panelLoading" Grid.Row="1" Background="#66000000">
+            <Grid Background="#FF20282E" Width="400" Height="200">
+                <StackPanel Margin="40">
+                    <TextBlock x:Name="lblStatus" Text="Loading..." FontSize="16" Margin="0,36,0,0" />
+                    <ProgressBar x:Name="progressBar" Height="20" Margin="0,10,0,0" RenderTransformOrigin="0.5,0.5" IsIndeterminate="True">
+                        <ProgressBar.RenderTransform>
+                            <CompositeTransform ScaleY="-1"/>
+                        </ProgressBar.RenderTransform>
+                    </ProgressBar>
+                </StackPanel>
+            </Grid>
         </Grid>
 
         <VisualStateManager.VisualStateGroups>
