--- a/MPfm/MPfm.Android/Resources/Layout/LibraryPreferences.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/LibraryPreferences.axml
@@ -1,63 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/libraryPreferences_mainLayout"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-    <TextView
-        android:id="@+id/libraryPreferences_lblTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Library Preferences"
-        android:textSize="16dp"
-        android:padding="6dp" />
-    <TextView
-        android:id="@+id/libraryPreferences_lblEnableSync"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Enable other users to sync with this library:"
-        android:textSize="12dp"
-        android:padding="6dp" />
-    <ToggleButton
-        android:id="@+id/libraryPreferences_btnEnableSync"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="6dp" />
-    <TextView
-        android:id="@+id/libraryPreferences_lblHTTPPort"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Sync server HTTP port:"
-        android:textSize="12dp"
-        android:padding="6dp" />
-    <EditText
-        android:id="@+id/libraryPreferences_txtHTTPPort"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="12dp"
-        android:padding="6dp" />
-    <Button
-        android:id="@+id/libraryPreferences_btnResetLibrary"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"        
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"        
-        android:background="@drawable/button"
-        android:text="Reset Library"
-        android:textColor="@color/button_textcolor"
-        android:textSize="14dp"        
-        android:padding="6dp" />
-    <Button
-        android:id="@+id/libraryPreferences_btnUpdateLibrary"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:background="@drawable/button"
-        android:text="Update Library"
-        android:textColor="@color/button_textcolor"        
-        android:textSize="14dp"        
-        android:padding="6dp" />
+  android:id="@+id/libraryPreferences_mainLayout"
+  android:orientation="vertical"
+  android:layout_width="fill_parent"
+  android:layout_height="fill_parent">
+  <TextView
+    android:id="@+id/libraryPreferences_lblTitle"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Library Preferences"
+    android:textSize="16dp"
+    android:padding="6dp" />
+  <TextView
+    android:id="@+id/libraryPreferences_lblEnableSync"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Enable other users to sync with this library:"
+    android:textSize="12dp"
+    android:padding="6dp" />
+  <ToggleButton
+    android:id="@+id/libraryPreferences_btnEnableSync"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:padding="6dp" />
+  <TextView
+    android:id="@+id/libraryPreferences_lblHTTPPort"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Sync server HTTP port:"
+    android:textSize="12dp"
+    android:padding="6dp" />
+  <EditText
+    android:id="@+id/libraryPreferences_txtHTTPPort"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:textSize="12dp"
+    android:padding="6dp" />
+  <Button
+    android:id="@+id/libraryPreferences_btnSelectFolders"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="8dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp"
+    android:background="@drawable/button"
+    android:text="Select Folders"
+    android:textColor="@color/button_textcolor"
+    android:textSize="14dp"
+    android:padding="6dp" />
+  <Button
+    android:id="@+id/libraryPreferences_btnResetLibrary"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"        
+    android:layout_marginTop="8dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp"        
+    android:background="@drawable/button"
+    android:text="Reset Library"
+    android:textColor="@color/button_textcolor"
+    android:textSize="14dp"        
+    android:padding="6dp" />
+  <Button
+    android:id="@+id/libraryPreferences_btnUpdateLibrary"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="8dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp"
+    android:background="@drawable/button"
+    android:text="Update Library"
+    android:textColor="@color/button_textcolor"        
+    android:textSize="14dp"        
+    android:padding="6dp" />
 </LinearLayout>
