--- a/MPfm/MPfm.Android/Resources/Layout/FolderCell.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/FolderCell.axml
@@ -1,39 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
-  android:layout_height="44dp"
+  android:layout_height="wrap_content"
   android:orientation="horizontal">  
+  <CheckBox
+    android:id="@+id/foldercell_checkbox"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:padding="6dp" />
   <TextView
     android:id="@+id/foldercell_title"
     android:layout_width="0dp"
-    android:layout_height="44dp"
-    android:layout_weight="1"    
+    android:layout_height="wrap_content"
+    android:layout_weight="1"
     android:minHeight="44dp"
-    android:maxHeight="44dp"          
     android:padding="6dp"
     android:gravity="center_vertical"
     android:textColor="@color/dialoglist_text"
     android:textSize="16dp" />
-  <LinearLayout
-    android:layout_width="60dp"
-    android:layout_height="44dp"        
-    android:layout_gravity="center_vertical"
-    android:layout_marginRight="8dp"
-    android:gravity="center_vertical"
-    android:orientation="vertical">  
-    <TextView
-      android:id="@+id/foldercell_count"
-      android:layout_width="60dp"
-      android:layout_height="wrap_content"      
-      android:gravity="right"
-      android:textColor="@color/dialoglist_text"
-      android:textSize="16dp" />
-    <TextView
-      android:layout_width="60dp"
-      android:layout_height="wrap_content"
-      android:gravity="right"
-      android:text="songs"
-      android:textColor="#CCCCCC"
-      android:textSize="11dp" />
-  </LinearLayout>
 </LinearLayout>
