--- a/MPfm/MPfm.WPF/Classes/Windows/ResumePlaybackWindow.xaml
+++ b/MPfm/MPfm.WPF/Classes/Windows/ResumePlaybackWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:base="clr-namespace:MPfm.WPF.Classes.Windows.Base"
         xmlns:controls="clr-namespace:MPfm.WPF.Classes.Controls"
         WindowStartupLocation="CenterScreen" Background="#FF242F35"
-        Title="Resume Playback" Height="426" Width="677.9">
+        Title="Resume Playback" Height="426" Width="677.9" Icon="/MPfm.WPF;component/Resources/Icon.ico">
     <Grid Margin="0">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -27,20 +27,20 @@
             </Grid.ColumnDefinitions>
             <Button Grid.Column="0" x:Name="btnRefresh">
                 <StackPanel Orientation="Horizontal" Margin="8">
-                    <Image Source="/Resources/Images/icon_button_refresh_16.png" Stretch="None" />
+                    <Image Source="/Resources/Images/Buttons/refresh.png" Stretch="None" />
                     <TextBlock Margin="6,0,0,0">Refresh devices</TextBlock>
                 </StackPanel>
             </Button>
             <StackPanel Grid.Column="1"></StackPanel>
             <Button Grid.Column="2" x:Name="btnManualConnect">
                 <StackPanel Orientation="Horizontal" Margin="8">
-                    <Image Source="/Resources/Images/icon_button_connect_16.png" Stretch="None" />
+                    <Image Source="/Resources/Images/Buttons/connect.png" Stretch="None" />
                     <TextBlock Margin="6,0,0,0">Connect manually to device</TextBlock>
                 </StackPanel>
             </Button>
             <Button Grid.Column="3" x:Name="btnConnect">
                 <StackPanel Orientation="Horizontal" Margin="8">
-                    <Image Source="/Resources/Images/icon_button_connect_16.png" Stretch="None" />
+                    <Image Source="/Resources/Images/Buttons/connect.png" Stretch="None" />
                     <TextBlock Margin="6,0,0,0">Connect to device</TextBlock>
                 </StackPanel>
             </Button>
