--- a/MPfm/MPfm.WPF/Classes/Windows/SyncWebBrowserWindow.xaml
+++ b/MPfm/MPfm.WPF/Classes/Windows/SyncWebBrowserWindow.xaml
@@ -4,44 +4,22 @@
         xmlns:base="clr-namespace:MPfm.WPF.Classes.Windows.Base"
         xmlns:controls="clr-namespace:MPfm.WPF.Classes.Controls"
         WindowStartupLocation="CenterScreen" Background="#FF242F35"
-        Title="Sync (Web Browser)" Height="426" Width="677.9">
+        Title="Sync (Web Browser)" Height="203.333" Width="495.233" Icon="/MPfm.WPF;component/Resources/Icon.ico">
     <Grid Margin="0">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition />
-            <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0" Orientation="Vertical" Margin="4">
             <Label Content="Sync (Web Browser)" Foreground="White" FontSize="16" FontWeight="Bold" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" Padding="4,2,4,2" />
-            <Label x:Name="lblIPAddress" Content="My IP address is" Foreground="#FFCCCCCC" FontSize="12" FontFamily="/Resources/Fonts/#Junction" Padding="4,2,4,2" />
+            <Label Content="Step 1" Foreground="#FFFFFFFF" FontSize="12" FontFamily="/Resources/Fonts/#Junction" Padding="4,2,4,2" />
+            <Label Content="Open a web browser and enter the following url in the address bar:" Foreground="#FFCCCCCC" FontSize="12" FontFamily="/Resources/Fonts/#Junction" Padding="4,2,4,2" />
+            <Label x:Name="lblUrl" FontSize="12" FontFamily="/Resources/Fonts/#Droid Sans Mono" Padding="4,2,4,2" HorizontalContentAlignment="Center">
+                <Hyperlink NavigateUri="http://www.apple.com" Foreground="White">http://192.168.1.1:53551</Hyperlink>
+            </Label>
+            <Label Content="Step 2" Foreground="#FFFFFFFF" FontSize="12" FontFamily="/Resources/Fonts/#Junction" Padding="4,2,4,2" />
+            <Label Content="Enter the following authentication code and click on the Login button:" Foreground="#FFCCCCCC" FontSize="12" FontFamily="/Resources/Fonts/#Junction" Padding="4,2,4,2" />
+            <Label x:Name="lblAuthenticationCode" Content="00000" Foreground="White" FontSize="12" FontFamily="/Resources/Fonts/#Droid Sans Mono" Padding="4,2,4,2" HorizontalContentAlignment="Center">                
+            </Label>
         </StackPanel>
-        <Grid Grid.Row="2" Margin="2">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition />
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
-            <Button Grid.Column="0" x:Name="btnRefresh">
-                <StackPanel Orientation="Horizontal" Margin="8">
-                    <Image Source="/Resources/Images/icon_button_refresh_16.png" Stretch="None" />
-                    <TextBlock Margin="6,0,0,0">Refresh devices</TextBlock>
-                </StackPanel>
-            </Button>
-            <StackPanel Grid.Column="1"></StackPanel>
-            <Button Grid.Column="2" x:Name="btnManualConnect">
-                <StackPanel Orientation="Horizontal" Margin="8">
-                    <Image Source="/Resources/Images/icon_button_connect_16.png" Stretch="None" />
-                    <TextBlock Margin="6,0,0,0">Connect manually to device</TextBlock>
-                </StackPanel>
-            </Button>
-            <Button Grid.Column="3" x:Name="btnConnect">
-                <StackPanel Orientation="Horizontal" Margin="8">
-                    <Image Source="/Resources/Images/icon_button_connect_16.png" Stretch="None" />
-                    <TextBlock Margin="6,0,0,0">Connect to device</TextBlock>
-                </StackPanel>
-            </Button>
-        </Grid>        
     </Grid>
 </base:BaseWindow>
