--- a/MPfm/MPfm.WPF/Classes/Windows/SyncWindow.xaml
+++ b/MPfm/MPfm.WPF/Classes/Windows/SyncWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:base="clr-namespace:MPfm.WPF.Classes.Windows.Base"
         xmlns:controls="clr-namespace:MPfm.WPF.Classes.Controls"
         WindowStartupLocation="CenterScreen" Background="#FF242F35"
-        Title="Sync (Nearby Devices)" Height="426" Width="677.9">
+        Title="Sync (Nearby Devices)" Height="426" Width="677.9" Icon="/MPfm.WPF;component/Resources/Icon.ico">
     <Grid Margin="0">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
